finish all task user and admin
